# efg-3d-electromagnetics-2006

./: .gitignore  02_formulacao_matematica.md  03_resultados_numericos.md  04_conclusao_referencias.md  AGENTS.md  CMakeLists.txt  README.md  TODO.md
apps/: reproduce_analytical_slice.c  reproduce_cube_nonuniform_smoke.c  reproduce_cube_smoke.c  reproduce_cube_sparse.c  smoke_test.c  test_gauss_cube.c
docs/: 00_capa_resumo.md  01_introducao.md  02_formulacao_matematica.md  03_resultados_numericos.md  04_conclusao_referencias.md  04_parametros_numericos.md  05_mapa_equacoes_codigo.md  06_condicoes_de_contorno_e_lagrange.md  07_notas_sobre_esflib.md  figure3_reproduction.md  revisao_baseline.md
docs/dev/: AI_HANDOFF.md  CLAUDE_AUDIT.md  CLAUDE_FIGURE3_AUDIT.md  CLAUDE_FINAL_REVIEW.md  CODEX_IMPLEMENTATION_LOG.md  GEMINI_REVIEW.md  TEST_REPORT.md
include/: analytical.h  cube_problem.h  dense_solver.h  dirichlet.h  error_norm.h  gauss.h  global_stiffness.h  lagrange_system.h  lapack_dense_solver.h  mat4.h  mls.h  mls_diagnostic.h  nodes.h  sparse_matrix.h  stiffness.h  support.h  weight.h
include/efg/: analytical.h  assembly.h  cube_problem.h  dense_solver.h  dirichlet.h  error_norm.h  gauss.h  global_stiffness.h  gmres.h  lagrange_system.h  lapack_dense_solver.h  mls.h  nodes.h  stiffness.h  vec3.h  weight.h
scripts/: analyze_cube_smoke.py  plot_cube_plane.py  plot_cube_smoke_refinement.py  run_cube_smoke_refinement.py
src/: analytical.c  assembly.c  cube_problem.c  dense_solver.c  dirichlet.c  error_norm.c  gauss.c  global_stiffness.c  gmres.c  lagrange_system.c  lapack_dense_solver.c  mat4.c  mls.c  mls_diagnostic.c  nodes.c  sparse_matrix.c  stiffness.c  support.c  vec3.c  weight.c
tests/: test_cube_problem.c  test_cube_problem_dirichlet_from_nodes.c  test_cube_problem_nonuniform.c  test_cube_problem_solve_small.c  test_dense_solver.c  test_dirichlet_constraints.c  test_efg_linear_patch_solve.c  test_error_norm.c  test_gauss.c  test_global_stiffness.c  test_gmres.c  test_lagrange_augmented_sparse.c  test_lagrange_solve.c  test_lagrange_system.c  test_lapack_dense_solver.c  test_mat4.c  test_mls_diagnostic.c  test_mls_gradient_linear_reproduction.c  test_mls_gradient_partition.c  test_mls_linear_reproduction.c  test_mls_partition.c  test_sparse_global_stiffness.c  test_sparse_matrix.c  test_stiffness_cell.c  test_support.c  test_weight.c  test_weight_derivatives.c  test_weight_tensor3d.c
